<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.1"/>

    <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Derry City"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/overview"/>

    <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Clear skies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityName"
            app:layout_constraintBottom_toTopOf="@+id/guideline_top"
    />

    <TableLayout
            android:layout_width="@dimen/grid_0"
            android:layout_height="@dimen/grid_0"
            android:layout_margin="@dimen/grid_16"
            app:layout_constraintTop_toBottomOf="@+id/guideline_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TableRow android:background="@color/colorPrimary" android:padding="@dimen/grid_4">
            <TextView style="@style/WeatherHeaderStyle" android:text="@string/current_temp_label"/>
            <TextView style="@style/WeatherHeaderStyle" android:text="@string/max_temp_label"/>
            <TextView style="@style/WeatherHeaderStyle" android:text="@string/min_temp_label"/>
        </TableRow>

        <TableRow android:background="@color/colorPrimaryLight" android:padding="5dp">
            <TextView android:id="@+id/curentTempValue" style="@style/WeatherContentStyle"/>
            <TextView android:id="@+id/maxTempValue" style="@style/WeatherContentStyle"/>
            <TextView android:id="@+id/minTempValue" style="@style/WeatherContentStyle"/>
        </TableRow>

        <View android:layout_width="match_parent" android:layout_height="2dp"
              android:background="@color/colorAccent"/>

        <TableRow android:background="@color/colorPrimary" android:padding="@dimen/grid_4">
            <TextView style="@style/WeatherHeaderStyle" android:text="@string/sunrise"/>
            <TextView style="@style/WeatherHeaderStyle" android:text="@string/sunset"/>
            <TextView style="@style/WeatherHeaderStyle" android:text="@string/wind_speed"/>
        </TableRow>

        <TableRow android:background="@color/colorPrimaryLight" android:padding="5dp">
            <TextView android:id="@+id/sunriseValue" style="@style/WeatherContentStyle"/>
            <TextView android:id="@+id/sunsetValue" style="@style/WeatherContentStyle"/>
            <TextView android:id="@+id/windValue" style="@style/WeatherContentStyle" />
        </TableRow>

        <View android:layout_width="match_parent" android:layout_height="2dp"
              android:background="@color/colorAccent"/>


    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>